--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,12 +9,11 @@ autorestart=true
 [program:minecraft]
 command=/bin/bash /opt/minecraft/run/systemd/execstart.sh
 directory=/opt/minecraft/run
+user=minecraft
 autostart=true
-autorestart=true
 stopsignal=TERM
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stopwaitsecs=120
-environment=SERVER_NAME="hasturian"
